Fixing spacing issue

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Segoe UI', sans-serif;
     margin: 0;
@@ -20,7 +26,7 @@ img {
 .page-wrapper {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .navbar {
@@ -71,7 +77,7 @@ img {
 
 .content-wrapper {
     display: flex;
-    flex: 1;
+    height: calc(100vh - 72px);
     width: 100%;
 }
 
